<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/notification"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_Workers"
        android:icon="@drawable/workers"
        android:title="@string/title_Workers" />
<!--    <item-->
<!--        android:id="@+id/navigation_preApprove_Schedule"-->
<!--        android:icon="@drawable/notification"-->
<!--        android:title="@string/title_preApprove_Schedule" />-->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/payment"
        android:icon="@drawable/ic_baseline_payments_24"
        android:title="Payments" />
    <item
        android:id="@+id/video_call"
        android:icon="@drawable/ic_baseline_video_camera_front_24"
        android:title="Video Call" />

</menu>